--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "moment": "^2.22.2",
         "vue-router": "^3.0.1",
         "vuetify": "^1.2.3"
     }
