--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "moment": "^2.22.2",
         "vue-router": "^3.0.1",
         "vuetify": "^1.2.3",
+        "vuetify-daterange-picker": "^2.5.0",
         "vuex": "^3.0.1"
     }
 }
