--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "chart.js": "^2.7.3",
         "exceljs": "^1.6.3",
+        "jspdf": "^1.4.1",
         "moment": "^2.22.2",
         "numeral": "^2.0.6",
         "vue-router": "^3.0.1",
