--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "chart.js": "^2.7.3",
         "exceljs": "^1.6.3",
         "jspdf": "^1.4.1",
+        "jspdf-autotable": "^2.3.5",
         "moment": "^2.22.2",
         "numeral": "^2.0.6",
         "vue-router": "^3.0.1",
