--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "nesbot/carbon": "1.37.1",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "~2.1.0",
-        "tymon/jwt-auth": " 1.0.0-rc.3"
+        "tymon/jwt-auth": "1.0.0-rc.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
