Added ldap authentication support

--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,16 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+LDAP_AUTHENTICATION=true
+LDAP_HOST=127.0.0.1
+LDAP_PORT=636
+LDAP_SSL=true
+LDAP_ADMIN_PREFIX=cn
+LDAP_ADMIN_USERNAME=admin
+LDAP_ADMIN_PASSWORD=admin
+LDAP_ACCOUNT_PREFIX=uid
+LDAP_ACCOUNT_SUFFIX="ou=users"
+LDAP_BASEDN="dc=entity,dc=com"
+LDAP_TIMEOUT=6
+
 JWT_SECRET=jwt_api_key
