--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.17",
-        "bootstrap-sass": "^3.3.7",
+        "axios": "^0.19.0",
+        "bootstrap-sass": "^3.4.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "jquery": "^3.4.1",
+        "laravel-mix": "^4.1.2",
+        "lodash": "^4.17.14",
+        "resolve-url-loader": "3.1.0",
+        "sass": "^1.22.6",
+        "sass-loader": "7.*",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "chart.js": "^2.7.3",
-        "exceljs": "^1.6.3",
-        "jspdf": "^1.4.1",
-        "jspdf-autotable": "^2.3.5",
-        "moment": "^2.22.2",
+        "chart.js": "^2.8.0",
+        "exceljs": "^1.13.0",
+        "jspdf": "^1.5.3",
+        "jspdf-autotable": "^3.1.3",
+        "moment": "^2.24.0",
         "numeral": "^2.0.6",
-        "vue-router": "^3.0.1",
-        "vuetify": "^1.2.3",
-        "vuetify-daterange-picker": "^2.5.0",
-        "vuex": "^3.0.1",
-        "xlsx": "^0.14.1"
+        "vue-router": "^3.0.7",
+        "vuetify": "^1.5.16",
+        "vuetify-daterange-picker": "^3.1.7-beta.2",
+        "vuex": "^3.1.1",
+        "xlsx": "^0.14.3"
     }
 }
